--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/hills-logi.png" />
+  <link rel="icon" type="image/svg+xml" href="/hills-logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Big hills | where barbing meets mastery</title>
+  <title>Big hills Classic Saloon | Let you hair do the talking</title>
 
   <!--google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
